--- a/style.css
+++ b/style.css
@@ -9,28 +9,29 @@ body {
 
 .pikachu {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 320px;
+  height: 360px;
 }
 
 /* Ears */
 .ear {
   position: absolute;
-  width: 60px;
+  width: 50px;
   height: 120px;
   background: #fdd835;
   border-radius: 50% 50% 0 0;
   top: 0;
+  z-index: 0;
 }
 .ear.left {
-  left: 20px;
-  transform: rotate(-15deg);
-  border-top: 30px solid #000;
+  left: 10px;
+  transform: rotate(-20deg);
+  background: linear-gradient(to top, #000 50px, #fdd835 50px);
 }
 .ear.right {
-  right: 20px;
-  transform: rotate(15deg);
-  border-top: 30px solid #000;
+  right: 10px;
+  transform: rotate(20deg);
+  background: linear-gradient(to top, #000 50px, #fdd835 50px);
 }
 
 /* Face */
@@ -41,40 +42,40 @@ body {
   width: 250px;
   height: 250px;
   position: absolute;
-  top: 40px;
-  left: 25px;
+  top: 80px;
+  left: 35px;
+  z-index: 1;
 }
 
 /* Eyes */
 .eye {
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background: #000;
   border-radius: 50%;
   top: 70px;
 }
 .eye.left {
-  left: 50px;
+  left: 45px;
 }
 .eye.right {
-  right: 50px;
+  right: 45px;
 }
-.eye::after {
-  content: '';
+.shine {
   position: absolute;
+  width: 12px;
+  height: 12px;
   background: white;
-  width: 10px;
-  height: 10px;
   border-radius: 50%;
-  top: 5px;
-  left: 5px;
+  top: 6px;
+  left: 6px;
 }
 
 /* Nose */
 .nose {
   position: absolute;
-  top: 120px;
+  top: 130px;
   left: 50%;
   transform: translateX(-50%);
   width: 12px;
@@ -87,10 +88,21 @@ body {
 .mouth {
   position: absolute;
   width: 60px;
-  height: 20px;
+  height: 40px;
+  background: transparent;
   border-bottom: 5px solid black;
-  border-radius: 0 0 50% 50%;
+  border-radius: 0 0 60px 60px;
   bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.tongue {
+  position: absolute;
+  width: 30px;
+  height: 20px;
+  background: #ff5e5e;
+  border-radius: 0 0 20px 20px;
+  bottom: -5px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -105,8 +117,8 @@ body {
   top: 150px;
 }
 .cheek.left {
-  left: 20px;
+  left: 15px;
 }
 .cheek.right {
-  right: 20px;
+  right: 15px;
 }
