--- a/style.css
+++ b/style.css
@@ -9,41 +9,41 @@ body {
 
 .pikachu {
   position: relative;
-  width: 320px;
-  height: 360px;
+  width: 300px;
+  height: 500px;
 }
 
 /* Ears */
 .ear {
   position: absolute;
-  width: 50px;
-  height: 120px;
+  width: 40px;
+  height: 100px;
   background: #fdd835;
   border-radius: 50% 50% 0 0;
   top: 0;
   z-index: 0;
 }
 .ear.left {
-  left: 10px;
+  left: 20px;
   transform: rotate(-20deg);
-  background: linear-gradient(to top, #000 50px, #fdd835 50px);
+  background: linear-gradient(to top, black 50%, #fdd835 50%);
 }
 .ear.right {
-  right: 10px;
+  right: 20px;
   transform: rotate(20deg);
-  background: linear-gradient(to top, #000 50px, #fdd835 50px);
+  background: linear-gradient(to top, black 50%, #fdd835 50%);
 }
 
-/* Face */
-.face {
-  background: #fdd835;
-  border: 5px solid #000;
-  border-radius: 50%;
-  width: 250px;
-  height: 250px;
+/* Head */
+.head {
   position: absolute;
   top: 80px;
-  left: 35px;
+  left: 25px;
+  width: 250px;
+  height: 250px;
+  background: #fdd835;
+  border: 5px solid black;
+  border-radius: 50%;
   z-index: 1;
 }
 
@@ -52,22 +52,22 @@ body {
   position: absolute;
   width: 40px;
   height: 40px;
-  background: #000;
+  background: black;
   border-radius: 50%;
-  top: 70px;
+  top: 80px;
 }
 .eye.left {
-  left: 45px;
+  left: 40px;
 }
 .eye.right {
-  right: 45px;
+  right: 40px;
 }
 .shine {
-  position: absolute;
   width: 12px;
   height: 12px;
   background: white;
   border-radius: 50%;
+  position: absolute;
   top: 6px;
   left: 6px;
 }
@@ -75,13 +75,13 @@ body {
 /* Nose */
 .nose {
   position: absolute;
+  width: 10px;
+  height: 10px;
+  background: black;
+  border-radius: 50%;
   top: 130px;
   left: 50%;
   transform: translateX(-50%);
-  width: 12px;
-  height: 12px;
-  background: black;
-  border-radius: 50%;
 }
 
 /* Mouth */
@@ -89,22 +89,23 @@ body {
   position: absolute;
   width: 60px;
   height: 40px;
-  background: transparent;
-  border-bottom: 5px solid black;
-  border-radius: 0 0 60px 60px;
-  bottom: 50px;
+  top: 160px;
   left: 50%;
   transform: translateX(-50%);
 }
+.smile {
+  width: 60px;
+  height: 20px;
+  border-bottom: 4px solid black;
+  border-radius: 0 0 60px 60px;
+}
 .tongue {
-  position: absolute;
   width: 30px;
   height: 20px;
   background: #ff5e5e;
-  border-radius: 0 0 20px 20px;
-  bottom: -5px;
-  left: 50%;
-  transform: translateX(-50%);
+  border-radius: 0 0 30px 30px;
+  margin: 0 auto;
+  margin-top: -5px;
 }
 
 /* Cheeks */
@@ -114,11 +115,84 @@ body {
   height: 30px;
   background: red;
   border-radius: 50%;
-  top: 150px;
+  top: 140px;
 }
 .cheek.left {
-  left: 15px;
+  left: 20px;
 }
 .cheek.right {
-  right: 15px;
+  right: 20px;
+}
+
+/* Body */
+.body {
+  position: absolute;
+  top: 300px;
+  left: 60px;
+  width: 180px;
+  height: 160px;
+  background: #fdd835;
+  border: 5px solid black;
+  border-radius: 60% 60% 30% 30%;
+  z-index: -1;
+}
+
+/* Arms */
+.arm {
+  position: absolute;
+  width: 50px;
+  height: 60px;
+  background: #fdd835;
+  border: 4px solid black;
+  border-radius: 50%;
+  top: 280px;
+}
+.arm.left {
+  left: 10px;
+  transform: rotate(20deg);
+}
+.arm.right {
+  right: 10px;
+  transform: rotate(-20deg);
+}
+
+/* Feet */
+.foot {
+  position: absolute;
+  width: 50px;
+  height: 30px;
+  background: #fdd835;
+  border: 4px solid black;
+  border-radius: 50%;
+  bottom: 0;
+}
+.foot.left {
+  left: 60px;
+}
+.foot.right {
+  right: 60px;
+}
+
+/* Tail */
+.tail {
+  position: absolute;
+  width: 20px;
+  height: 100px;
+  background: #fdd835;
+  border: 4px solid black;
+  right: -30px;
+  top: 300px;
+  transform: rotate(30deg);
+  z-index: -2;
+}
+.tail::before {
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 20px;
+  background: #fdd835;
+  border: 4px solid black;
+  top: -20px;
+  left: -20px;
+  transform: rotate(-30deg);
 }
