--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  background: #fff89a;
   margin: 0;
-  height: 100vh;
+  background-color: #fff89a;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .pikachu {
@@ -21,15 +21,15 @@ body {
   background: #fdd835;
   border-radius: 50% 50% 0 0;
   top: 0;
-  z-index: 0;
+  z-index: 1;
 }
 .ear.left {
-  left: 20px;
+  left: 30px;
   transform: rotate(-20deg);
   background: linear-gradient(to top, black 50%, #fdd835 50%);
 }
 .ear.right {
-  right: 20px;
+  right: 30px;
   transform: rotate(20deg);
   background: linear-gradient(to top, black 50%, #fdd835 50%);
 }
@@ -44,7 +44,7 @@ body {
   background: #fdd835;
   border: 5px solid black;
   border-radius: 50%;
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Eyes */
@@ -54,13 +54,13 @@ body {
   height: 40px;
   background: black;
   border-radius: 50%;
-  top: 80px;
+  top: 70px;
 }
 .eye.left {
-  left: 40px;
+  left: 45px;
 }
 .eye.right {
-  right: 40px;
+  right: 45px;
 }
 .shine {
   width: 12px;
@@ -68,44 +68,32 @@ body {
   background: white;
   border-radius: 50%;
   position: absolute;
-  top: 6px;
-  left: 6px;
+  top: 8px;
+  left: 8px;
 }
 
 /* Nose */
 .nose {
   position: absolute;
+  top: 130px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 10px;
   height: 10px;
   background: black;
   border-radius: 50%;
-  top: 130px;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 /* Mouth */
 .mouth {
   position: absolute;
-  width: 60px;
-  height: 40px;
   top: 160px;
   left: 50%;
   transform: translateX(-50%);
-}
-.smile {
   width: 60px;
   height: 20px;
   border-bottom: 4px solid black;
-  border-radius: 0 0 60px 60px;
-}
-.tongue {
-  width: 30px;
-  height: 20px;
-  background: #ff5e5e;
-  border-radius: 0 0 30px 30px;
-  margin: 0 auto;
-  margin-top: -5px;
+  border-radius: 0 0 40px 40px;
 }
 
 /* Cheeks */
@@ -115,80 +103,43 @@ body {
   height: 30px;
   background: red;
   border-radius: 50%;
-  top: 140px;
+  top: 150px;
 }
 .cheek.left {
-  left: 20px;
+  left: 25px;
 }
 .cheek.right {
-  right: 20px;
+  right: 25px;
 }
 
 /* Body */
 .body {
   position: absolute;
   top: 300px;
-  left: 60px;
-  width: 180px;
-  height: 160px;
+  left: 75px;
+  width: 150px;
+  height: 180px;
   background: #fdd835;
   border: 5px solid black;
-  border-radius: 60% 60% 30% 30%;
-  z-index: -1;
-}
-
-/* Arms */
-.arm {
-  position: absolute;
-  width: 50px;
-  height: 60px;
-  background: #fdd835;
-  border: 4px solid black;
-  border-radius: 50%;
-  top: 280px;
-}
-.arm.left {
-  left: 10px;
-  transform: rotate(20deg);
-}
-.arm.right {
-  right: 10px;
-  transform: rotate(-20deg);
-}
-
-/* Feet */
-.foot {
-  position: absolute;
-  width: 50px;
-  height: 30px;
-  background: #fdd835;
-  border: 4px solid black;
-  border-radius: 50%;
-  bottom: 0;
-}
-.foot.left {
-  left: 60px;
-}
-.foot.right {
-  right: 60px;
+  border-radius: 50% 50% 40% 40%;
+  z-index: 1;
 }
 
 /* Tail */
 .tail {
   position: absolute;
   width: 20px;
-  height: 100px;
+  height: 80px;
   background: #fdd835;
   border: 4px solid black;
   right: -30px;
-  top: 300px;
-  transform: rotate(30deg);
-  z-index: -2;
+  top: 320px;
+  transform: rotate(25deg);
 }
 .tail::before {
   content: '';
   position: absolute;
-  width: 60px;
+  width: 50px;
   height: 20px;
   background: #fdd835;
   border: 4px solid black;
