--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #fff89a;
+  background: #fff89a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,20 +16,21 @@ body {
 /* Ears */
 .ear {
   position: absolute;
-  width: 40px;
-  height: 100px;
+  width: 50px;
+  height: 120px;
   background: #fdd835;
   border-radius: 50% 50% 0 0;
-  top: 0;
-  z-index: 1;
+  z-index: 0;
 }
 .ear.left {
-  left: 30px;
+  left: 0;
+  top: 0;
   transform: rotate(-20deg);
   background: linear-gradient(to top, black 50%, #fdd835 50%);
 }
 .ear.right {
-  right: 30px;
+  right: 0;
+  top: 0;
   transform: rotate(20deg);
   background: linear-gradient(to top, black 50%, #fdd835 50%);
 }
@@ -44,7 +45,7 @@ body {
   background: #fdd835;
   border: 5px solid black;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 1;
 }
 
 /* Eyes */
@@ -54,7 +55,7 @@ body {
   height: 40px;
   background: black;
   border-radius: 50%;
-  top: 70px;
+  top: 80px;
 }
 .eye.left {
   left: 45px;
@@ -68,18 +69,18 @@ body {
   background: white;
   border-radius: 50%;
   position: absolute;
-  top: 8px;
-  left: 8px;
+  top: 6px;
+  left: 6px;
 }
 
 /* Nose */
 .nose {
   position: absolute;
-  top: 130px;
+  top: 140px;
   left: 50%;
   transform: translateX(-50%);
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   background: black;
   border-radius: 50%;
 }
@@ -87,13 +88,25 @@ body {
 /* Mouth */
 .mouth {
   position: absolute;
-  top: 160px;
+  top: 170px;
   left: 50%;
   transform: translateX(-50%);
   width: 60px;
+  height: 40px;
+}
+.smile {
+  width: 60px;
   height: 20px;
   border-bottom: 4px solid black;
-  border-radius: 0 0 40px 40px;
+  border-radius: 0 0 60px 60px;
+}
+.tongue {
+  width: 30px;
+  height: 20px;
+  background: #ff5e5e;
+  border-radius: 0 0 30px 30px;
+  margin: 0 auto;
+  margin-top: -5px;
 }
 
 /* Cheeks */
@@ -106,10 +119,10 @@ body {
   top: 150px;
 }
 .cheek.left {
-  left: 25px;
+  left: 20px;
 }
 .cheek.right {
-  right: 25px;
+  right: 20px;
 }
 
 /* Body */
@@ -125,6 +138,43 @@ body {
   z-index: 1;
 }
 
+/* Arms */
+.arm {
+  position: absolute;
+  width: 50px;
+  height: 60px;
+  background: #fdd835;
+  border: 4px solid black;
+  border-radius: 50%;
+  top: 280px;
+  z-index: 0;
+}
+.arm.left {
+  left: 10px;
+  transform: rotate(20deg);
+}
+.arm.right {
+  right: 10px;
+  transform: rotate(-20deg);
+}
+
+/* Feet */
+.foot {
+  position: absolute;
+  width: 50px;
+  height: 30px;
+  background: #fdd835;
+  border: 4px solid black;
+  border-radius: 50%;
+  bottom: 0;
+}
+.foot.left {
+  left: 60px;
+}
+.foot.right {
+  right: 60px;
+}
+
 /* Tail */
 .tail {
   position: absolute;
@@ -134,12 +184,13 @@ body {
   border: 4px solid black;
   right: -30px;
   top: 320px;
-  transform: rotate(25deg);
+  transform: rotate(30deg);
+  z-index: 0;
 }
 .tail::before {
   content: '';
   position: absolute;
-  width: 50px;
+  width: 60px;
   height: 20px;
   background: #fdd835;
   border: 4px solid black;
